<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Better Shopping List</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="item_hint">New Item</string>
    <string name="empty_text">No items yet</string>
    <string name="add_item">Add Item</string>
    <string name="shopping_cart_empty">Empty shopping cart</string>
    <string name="lorem_ipsum">Lorem ipsum</string>
    <string name="new_item">New Item</string>
    <string name="description_hint">Description</string>
    <string name="qty_hint">Quantity</string>
    <string name="delete">Delete</string>
    <string name="sort_alpha">Sort (A-Z)</string>
    <string name="clear_all">Clear list</string>
    <string name="developer_string">development</string>
    <string name="edit_item">Edit Item</string>
    <string name="scan">Scan</string>
    <string name="in_shopping_cart">In your cart</string>
    <string name="item_move">Move to cart</string>
    <string name="settings_metric">Use metric units</string>
    <string name="title_settings">Settings</string>
    <string name="prefs_general">General</string>
    <string name="prefs_server">Server Settings</string>
    <string name="pref_sync_remote">Sync to remote server</string>
    <string name="pref_server_url">Server URL</string>
    <string name="pref_server_list_path">Remote list path</string>
	<string name="default_server_url">http://benjamin-api-test.stage54.limelyte.com</string>
	<string name="default_server_list_path">/list.json</string>
	<string name="force_sync_down">Force sync from server</string>
	<string name="force_sync_up">Force sync to server</string>
	<string name="force_sync">Force Sync</string>
	<string name="clear_server_list">Clear server-side list</string>
	<string name="pref_more_sync_opts">More Sync options</string>
</resources>
