<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <Button
        android:id="@+id/button_add_item"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/add_item" />

    <EditText
        android:id="@+id/editText_new_item"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/button_add_item"
        android:layout_toLeftOf="@+id/button_scan"
        android:ems="10"
        android:hint="@string/description_hint"
        android:imeOptions="actionDone"
        android:inputType="text" />

    <Button
        android:id="@+id/button_scan"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/button_add_item"
        android:text="@string/scan"
        android:textSize="14sp" />

</RelativeLayout>