<?xml version="1.0" encoding="utf-8"?>


<!-- this layout is the basis for the "edit item" dialog -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/item_uom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:padding="4dp"
        android:text="@string/new_item"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <view
        class="com.coffeestrike.bettershoppinglist.KeyboardEditText"
        android:id="@+id/description_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/description_hint"
        android:padding="4dp" />

    <EditText
        android:id="@+id/qty_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/qty_hint"
        android:inputType="number"
        android:padding="4dp" />

    <Spinner
        android:id="@+id/unit_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
